--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -15,7 +15,7 @@
   transition: 0.5s background-color ease;
   .nav-link-black {
     color: rgba(255,255,255, 0.6);
-    padding: 0px 20px 0px 0px;
+    padding: 20px 20px 20px 0px;
   }
   .nav-link-blue {
     color: #3BD4CD;
@@ -41,7 +41,7 @@
 
 .nav-link-black {
   color: black;
-  padding: 0px 20px 0px 0px;
+  padding: 0px 20px 20px 0px;
 }
 
 .nav-link-black:hover {
