--- a/app/assets/stylesheets/components/_section.scss
+++ b/app/assets/stylesheets/components/_section.scss
@@ -1,7 +1,7 @@
 .section {
   text-align: center;
   background: white;
-  margin-top: 0px;
+  margin: 0px 0px;
   padding: 30px;                             /* Internal space */
   border-radius: 4px;                        /* Small radius */
   box-shadow: 0 10px 30px rgba(0,0,0,.1);
